--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,24 @@
 version: '3.1'
 
 services:
-    nginx:
         build:
             context: ../nginx
             args:
                 TZ: "America/New_York"
-        image: nginx:20171211
+        image: nginx:20171222
         container_name: nginx
         hostname: nginx
         restart: unless-stopped
         environment:
             TZ: "America/New_York"
+        links:
+           - jenkins
+           - phpadmin
+           - nagios
+           - zen
         volumes:
-            - ../nginx/conf.d:/etc/nginx/conf.d
-            - ../nginx/log:/var/log/nginx
-            - ../www:/www
+            - ../nginx/vols/log:/var/log/nginx 
+            - ../vols/www:/var/www
         ports:
             - 80:80
             - 443:443
