--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: '3.5'
 
 services:
         build:
-            context: ../nginx
             args:
+                CONTAINER_NAME: nginx
                 CONTAINER_VERSION: 1.0.1
+                DEBUG_TRACE: 0
                 FROM_BASE: base_container:20180217
+            context: .
+            dockerfile: Dockerfile
         container_name: nginx
         hostname: nginx
         image: nginx:20180217
@@ -15,14 +18,14 @@ services:
            - nagios
            - zen
         logging:
-            driver: "json-file"
+            driver: json-file
             options:
-                max-size: "10m"
-                max-file: "3"
+                max-size: 10m
+                max-file: 3
         ports:
             - 80:80
             - 443:443
 #        restart: unless-stopped
         volumes:
-            - ../nginx/vols/log:/var/log/nginx 
-            - ../vols/www:/var/www
+            - ./vols/log:/var/log/nginx 
+            - ./vols/www:/var/www
