--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
                 CONTAINER_NAME: nginx
                 CONTAINER_VERSION: 1.0.6
                 DEBUG_TRACE: 0
-                FROM_BASE: base_container:20180314
+                FROM_BASE: base_container:latest
             context: .
             dockerfile: Dockerfile
         container_name: nginx
         hostname: nginx
-        image: nginx:20180314
+        image: nginx:latest
         logging:
             driver: json-file
             options:
