--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
                 CBF_VERSION: ${CBF_VERSION:-dev}
                 CONTAINER_NAME: nginx
                 CONTAINER_VERSION: 1.0.6
-                FROM_BASE: php5:latest
+                FROM_BASE: php5:${CONTAINER_TAG:-latest}
             context: .
             dockerfile: Dockerfile
         container_name: nginx
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
         hostname: nginx
-        image: nginx:latest
+        image: nginx:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
@@ -24,5 +24,5 @@ services:
             - 443:443
 #        restart: unless-stopped
         volumes:
-            - ./vols/log:/var/log/nginx 
+            - ./vols/log:/var/log
             - ./vols/www:/var/www
