--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
-version: '3.5'
+version: '3.3'
 
 services:
+    nginx:
         build:
             args:
-                CBF_VERSION: ${CBF_VERSION:-dev}
+                CBF_VERSION: "${CBF_VERSION:-}"
                 CONTAINER_NAME: nginx
-                CONTAINER_VERSION: 1.0.6
-                FROM_BASE: php5:${CONTAINER_TAG:-latest}
+                CONTAINER_VERSION: ${CONTAINER_VERSION:-3.0.0}
+                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base:${CONTAINER_TAG:-latest}
+                SSL_ALREADY_GENERATED: 'true'
+            cache_from:
+                - ${DOCKER_REGISTRY:-}alpine:3.8
+                - ${DOCKER_REGISTRY:-}supervisord:${CONTAINER_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}nginx_base:${CONTAINER_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}php5:${CONTAINER_TAG:-latest}
             context: .
             dockerfile: Dockerfile
         container_name: nginx
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
+            SUPERVISORD_PASS: $CFG_PASS
+            SUPERVISORD_USER: $CFG_USER
         hostname: nginx
-        image: nginx:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}nginx:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
