--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
             args:
                 CBF_VERSION: "${CBF_VERSION:-}"
                 CONTAINER_NAME: nginx
-                CONTAINER_VERSION: ${CONTAINER_VERSION:-3.0.0}
                 FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base:${CONTAINER_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
@@ -23,6 +22,14 @@ services:
             SUPERVISORD_USER: $CFG_USER
         hostname: nginx
         image: ${DOCKER_REGISTRY:-}nginx:${CONTAINER_TAG:-latest}
+        labels:
+            container.fingerprint: $CONTAINER_FINGERPRINT
+            container.git.branch: $CONTAINER_GIT_BRANCH
+            container.git.commit: $CONTAINER_GIT_COMMIT
+            container.git.url: $CONTAINER_GIT_URL
+            container.origin: $CONTAINER_ORIGIN
+            container.original.name: nginx
+            container.version: ${CONTAINER_VERSION:-3.0.0}
         logging:
             driver: json-file
             options:
