--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,23 @@ services:
             args:
                 CBF_VERSION: "${CBF_VERSION:-}"
                 CONTAINER_NAME: nginx
-                CONTAINER_VERSION: ${CONTAINER_VERSION:-3.0.0}
-                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base:${CONTAINER_TAG:-latest}
+                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
                 - ${DOCKER_REGISTRY:-}alpine:3.8
-                - ${DOCKER_REGISTRY:-}supervisord:${CONTAINER_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}nginx_base:${CONTAINER_TAG:-latest}
-#                - ${DOCKER_REGISTRY:-}php5:${CONTAINER_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}supervisord:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}nginx_base:${BASE_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}php5:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
+            labels:
+                container.fingerprint: $CONTAINER_FINGERPRINT
+                container.git.branch: $CONTAINER_GIT_BRANCH
+                container.git.commit: $CONTAINER_GIT_COMMIT
+                container.git.url: $CONTAINER_GIT_URL
+                container.origin: $CONTAINER_ORIGIN
+                container.original.name: nginx
+                container.version: ${CONTAINER_VERSION:-3.0.0}
         container_name: nginx
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
