--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
             args:
                 CBF_VERSION: "${CBF_VERSION:-}"
                 CONTAINER_NAME: nginx
-                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base:${BASE_TAG:-latest}
+                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
                 - ${DOCKER_REGISTRY:-}alpine:3.8
                 - ${DOCKER_REGISTRY:-}supervisord:${BASE_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}nginx_base:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
 #                - ${DOCKER_REGISTRY:-}php5:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
