--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
                 - ${DOCKER_REGISTRY:-}alpine:3.8
                 - ${DOCKER_REGISTRY:-}supervisord:${BASE_TAG:-latest}
                 - ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
-#                - ${DOCKER_REGISTRY:-}php5:${BASE_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}php/5.6.37-r0:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
             labels:
