change kafka image names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
             SUPERVISORD_PASS: $CFG_PASS
             SUPERVISORD_USER: $CFG_USER
         hostname: nginx
-        image: ${DOCKER_REGISTRY:-}nginx:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}nginx/1.15.1:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
