--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
             args:
                 CBF_VERSION: "${CBF_VERSION:-}"
                 CONTAINER_NAME: nginx
-                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base:${BASE_TAG:-latest}
+                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
                 - ${DOCKER_REGISTRY:-}alpine:3.8
                 - ${DOCKER_REGISTRY:-}supervisord:${BASE_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}nginx_base:${BASE_TAG:-latest}
-#                - ${DOCKER_REGISTRY:-}php5:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}php/5.6.37-r0:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
             labels:
@@ -23,14 +23,13 @@ services:
                 container.git.url: $CONTAINER_GIT_URL
                 container.origin: $CONTAINER_ORIGIN
                 container.original.name: nginx
-                container.version: ${CONTAINER_VERSION:-3.0.0}
         container_name: nginx
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
             SUPERVISORD_PASS: $CFG_PASS
             SUPERVISORD_USER: $CFG_USER
         hostname: nginx
-        image: ${DOCKER_REGISTRY:-}nginx:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}nginx/1.15.1:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
