--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,21 @@ services:
     nginx_proxy:
         build:
             args:
-                CBF_VERSION: "${CBF_VERSION:-}"
+                CBF_VERSION: ${CBF_VERSION:-}
                 CONTAINER_NAME: nginx_proxy
-                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
+                FROM_BASE: ${DOCKER_REGISTRY:-}${OS:-}nginx_base/1.15.1:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
-                - ${DOCKER_REGISTRY:-}alpine:3.8
-                - ${DOCKER_REGISTRY:-}supervisord:${BASE_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
-#                - ${DOCKER_REGISTRY:-}php/5.6.37-r0:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${OS:-}alpine:3.8
+                - ${DOCKER_REGISTRY:-}${OS:-}supervisord:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${OS:-}nginx_base/1.15.1:${BASE_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}${OS:-}php/5.6.37-r0:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
             labels:
                 container.build.time: $CONTAINER_BUILD_TIME
                 container.fingerprint: $CONTAINER_FINGERPRINT
-                container.git.branch: $CONTAINER_GIT_BRANCH
+                container.git.refs: $CONTAINER_GIT_REFS
                 container.git.commit: $CONTAINER_GIT_COMMIT
                 container.git.url: $CONTAINER_GIT_URL
                 container.origin: $CONTAINER_ORIGIN
@@ -32,7 +32,7 @@ services:
             USER_ID: $CFG_USER
             USER_PASS: $CFG_PASS
         hostname: nginx
-        image: ${DOCKER_REGISTRY:-}nginx_proxy/1.15.1:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}${OS:-}nginx_proxy/1.15.1:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
