--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,21 @@ services:
     nginx_proxy:
         build:
             args:
-                CBF_VERSION: "${CBF_VERSION:-}"
+                CBF_VERSION: ${CBF_VERSION:-}
                 CONTAINER_NAME: nginx_proxy
-                FROM_BASE: ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
+                FROM_BASE: ${DOCKER_REGISTRY:-}${OS:-}nginx_base/1.15.1:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
-                - ${DOCKER_REGISTRY:-}alpine:3.8
-                - ${DOCKER_REGISTRY:-}supervisord:${BASE_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}nginx_base/1.15.1:${BASE_TAG:-latest}
-#                - ${DOCKER_REGISTRY:-}php/5.6.37-r0:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${OS:-}alpine:3.8
+                - ${DOCKER_REGISTRY:-}${OS:-}supervisord:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${OS:-}nginx_base/1.15.1:${BASE_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}${OS:-}php/5.6.37-r0:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
             labels:
                 container.build.time: $CONTAINER_BUILD_TIME
                 container.fingerprint: $CONTAINER_FINGERPRINT
-                container.git.branch: $CONTAINER_GIT_BRANCH
+                container.git.refs: $CONTAINER_GIT_REFS
                 container.git.commit: $CONTAINER_GIT_COMMIT
                 container.git.url: $CONTAINER_GIT_URL
                 container.origin: $CONTAINER_ORIGIN
@@ -27,12 +27,12 @@ services:
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
             PWD_PROTECTED: 'true'
-            SUPERVISORD_PASS: $CFG_PASS
+            SUPERVISORD_PASS_FILE: /run/secrets/supervisord.pwd
             SUPERVISORD_USER: $CFG_USER
-            USER_ID: $CFG_USER
-            USER_PASS: $CFG_PASS
+            WEB_USER_ID: $CFG_USER
+            WEB_USER_PASS_FILE: /run/secrets/web_user.pwd
         hostname: nginx
-        image: ${DOCKER_REGISTRY:-}nginx_proxy/1.15.1:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}${OS:-}nginx_proxy/1.15.1:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
@@ -42,6 +42,24 @@ services:
             - 80:80
             - 443:443
 #        restart: unless-stopped
+        secrets:
+            - supervisord.pwd
+            - web_user.pwd
+            - certificate.crt
+            - server.key
+            - dhparam.pem
         volumes:
             - ./vols/log:/var/log
             - ./vols/www:/var/www
+
+secrets:
+   supervisord.pwd:
+     file: ~/.inf/secrets/bobb.password
+   web_user.pwd:
+     file: ~/.inf/secrets/bobb.password
+   certificate.crt:
+     file: ~/.inf/ssl/server.crt
+   server.key:
+     file: ~/.inf/ssl/server.key
+   dhparam.pem:
+     file: ~/.inf/ssl/dhparam.pem
