--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
             args:
                 CBF_VERSION: ${CBF_VERSION:-}
                 CONTAINER_NAME: nginx_proxy
-                FROM_BASE: ${DOCKER_REGISTRY:-}${OS:-}nginx_base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
+                FROM_BASE: ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx_base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
-                - ${DOCKER_REGISTRY:-}${OS:-}alpine:3.8
-                - ${DOCKER_REGISTRY:-}${OS:-}supervisord:${BASE_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}${OS:-}nginx_base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
-#                - ${DOCKER_REGISTRY:-}${OS:-}php/${PHP5_VERSION:-5.6.37-r0}:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}alpine:3.8
+                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}supervisord:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx_base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
+#                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}php/${PHP5_VERSION:-5.6.37-r0}:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
             labels:
@@ -32,7 +32,7 @@ services:
             WEB_USER_ID: $CFG_USER
             WEB_USER_PASS_FILE: /run/secrets/web_user.pwd
         hostname: nginx
-        image: ${DOCKER_REGISTRY:-}${OS:-}nginx_proxy/${NGINX_VERSION:-1.15.3}:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx_proxy/${NGINX_VERSION:-1.15.3}:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
