--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.3'
 
 services:
-    nginx_proxy:
+    nginx-proxy:
         build:
             args:
                 CBF_VERSION: ${CBF_VERSION:-}
-                CONTAINER_NAME: nginx_proxy
-                FROM_BASE: ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx_base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
+                CONTAINER_NAME: nginx-proxy
+                FROM_BASE: ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx-base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
                 SSL_ALREADY_GENERATED: 'true'
             cache_from:
                 - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}alpine:3.8
                 - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}supervisord:${BASE_TAG:-latest}
-                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx_base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
+                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx-base/${NGINX_VERSION:-1.15.3}:${BASE_TAG:-latest}
 #                - ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}php/${PHP5_VERSION:-5.6.37-r0}:${BASE_TAG:-latest}
             context: .
             dockerfile: Dockerfile
@@ -22,8 +22,8 @@ services:
                 container.git.commit: $CONTAINER_GIT_COMMIT
                 container.git.url: $CONTAINER_GIT_URL
                 container.origin: $CONTAINER_ORIGIN
-                container.original.name: nginx_proxy
-        container_name: nginx_proxy
+                container.original.name: nginx-proxy
+        container_name: nginx-proxy
         environment:
             DEBUG_TRACE: ${DEBUG_TRACE:-0}
             PWD_PROTECTED: 'true'
@@ -32,7 +32,7 @@ services:
             WEB_USER_ID: $CFG_USER
             WEB_USER_PASS_FILE: /run/secrets/web_user.pwd
         hostname: nginx
-        image: ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx_proxy/${NGINX_VERSION:-1.15.3}:${CONTAINER_TAG:-latest}
+        image: ${DOCKER_REGISTRY:-}${CONTAINER_OS:-}nginx-proxy/${NGINX_VERSION:-1.15.3}:${CONTAINER_TAG:-latest}
         logging:
             driver: json-file
             options:
